first 2 days updated

--- a/02-Python Statements/09-Guessing Game Challenge.ipynb
+++ b/02-Python Statements/09-Guessing Game Challenge.ipynb
@@ -46,12 +46,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WELCOME TO GUESS ME!\n",
+      "I'm thinking of a number between 1 and 100\n",
+      "If your guess is more than 10 away from my number, I'll tell you you're COLD\n",
+      "If your guess is within 10 of my number, I'll tell you you're WARM\n",
+      "If your guess is farther than your most recent guess, I'll say you're getting COLDER\n",
+      "If your guess is closer than your most recent guess, I'll say you're getting WARMER\n",
+      "LET'S PLAY!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "num = random.randint(1,100)\n",
+    "\n",
+    "print(\"WELCOME TO GUESS ME!\")\n",
+    "print(\"I'm thinking of a number between 1 and 100\")\n",
+    "print(\"If your guess is more than 10 away from my number, I'll tell you you're COLD\")\n",
+    "print(\"If your guess is within 10 of my number, I'll tell you you're WARM\")\n",
+    "print(\"If your guess is farther than your most recent guess, I'll say you're getting COLDER\")\n",
+    "print(\"If your guess is closer than your most recent guess, I'll say you're getting WARMER\")\n",
+    "print(\"LET'S PLAY!\")\n",
+    "guesses = [0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm thinking of a number between 1 and 100.\n",
+      "  What is your guess? 10\n",
+      "WARM!\n",
+      "I'm thinking of a number between 1 and 100.\n",
+      "  What is your guess? 11\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/86/qn6vl22j3jjd3bjw57rl2h0w0000gn/T/ipykernel_10568/1528749545.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mguesses\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mguess\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mguess\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'WARMER!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "while True:\n",
+    "\n",
+    "    # we can copy the code from above to take an input\n",
+    "    guess = int(input(\"I'm thinking of a number between 1 and 100.\\n  What is your guess? \"))\n",
+    "    \n",
+    "    if guess < 1 or guess > 100:\n",
+    "        print('OUT OF BOUNDS! Please try again: ')\n",
+    "        continue\n",
+    "    \n",
+    "    # here we compare the player's guess to our number\n",
+    "    if guess == num:\n",
+    "        print(f'CONGRATULATIONS, YOU GUESSED IT IN ONLY {len(guesses)} GUESSES!!')\n",
+    "        break\n",
+    "        \n",
+    "    # if guess is incorrect, add guess to the list\n",
+    "    guesses.append(guess)\n",
+    "   \n",
+    "    # when testing the first guess, guesses[-2]==0, which evaluates to False\n",
+    "    # and brings us down to the second section\n",
+    "    \n",
+    "    if guesses[-2]:  \n",
+    "        if abs(num-guess) < abs(num-guess[-2]):\n",
+    "            print('WARMER!')\n",
+    "        else:\n",
+    "            print('COLDER!')\n",
+    "   \n",
+    "    else:\n",
+    "        if abs(num-guess) <= 10:\n",
+    "            print('WARM!')\n",
+    "        else:\n",
+    "            print('COLD!')\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,12 +151,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WELCOME TO GUESS ME!\n",
+      "I'm thinking of a number between 1 and 100\n",
+      "If your guess is more than 10 away from my number, I'll tell you you're COLD\n",
+      "If your guess is within 10 of my number, I'll tell you you're WARM\n",
+      "If your guess is farther than your most recent guess, I'll say you're getting COLDER\n",
+      "If your guess is closer than your most recent guess, I'll say you're getting WARMER\n",
+      "LET'S PLAY!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"WELCOME TO GUESS ME!\")\n",
+    "print(\"I'm thinking of a number between 1 and 100\")\n",
+    "print(\"If your guess is more than 10 away from my number, I'll tell you you're COLD\")\n",
+    "print(\"If your guess is within 10 of my number, I'll tell you you're WARM\")\n",
+    "print(\"If your guess is farther than your most recent guess, I'll say you're getting COLDER\")\n",
+    "print(\"If your guess is closer than your most recent guess, I'll say you're getting WARMER\")\n",
+    "print(\"LET'S PLAY!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,12 +189,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "guess =[0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,15 +205,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm thinking of a number between 1 and 100.\n",
+      "  What is your guess? 10\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'guesses' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/86/qn6vl22j3jjd3bjw57rl2h0w0000gn/T/ipykernel_8948/3127925920.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;31m# if guess is incorrect, add guess to the list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mguesses\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mguess\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;31m# when testing the first guess, guesses[-2]==0, which evaluates to False\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'guesses' is not defined"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
+    "\n",
+    "    # we can copy the code from above to take an input\n",
+    "    guess = int(input(\"I'm thinking of a number between 1 and 100.\\n  What is your guess? \"))\n",
     "    \n",
-    "    pass"
+    "    if guess < 1 or guess > 100:\n",
+    "        print('OUT OF BOUNDS! Please try again: ')\n",
+    "        continue\n",
+    "    \n",
+    "    # here we compare the player's guess to our number\n",
+    "    if guess == num:\n",
+    "        print(f'CONGRATULATIONS, YOU GUESSED IT IN ONLY {len(guesses)} GUESSES!!')\n",
+    "        break\n",
+    "        \n",
+    "    # if guess is incorrect, add guess to the list\n",
+    "    guesses.append(guess)\n",
+    "    \n",
+    "    # when testing the first guess, guesses[-2]==0, which evaluates to False\n",
+    "    # and brings us down to the second section\n",
+    "    \n",
+    "    if guesses[-2]:  \n",
+    "        if abs(num-guess) < abs(num-guesses[-2]):\n",
+    "            print('WARMER!')\n",
+    "        else:\n",
+    "            print('COLDER!')\n",
+    "   \n",
+    "    else:\n",
+    "        if abs(num-guess) <= 10:\n",
+    "            print('WARM!')\n",
+    "        else:\n",
+    "            print('COLD!')       "
    ]
   },
   {
@@ -153,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -167,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
