--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -31,10 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "st = 'Print only the words that start with s in this sentence'"
@@ -42,13 +40,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start\n",
+      "s\n",
+      "sentence\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code here"
+    "#Code here\n",
+    "\n",
+    "for phrase in st.split():\n",
+    "    if phrase[0] == 's':\n",
+    "        \n",
+    "        print(phrase)\n",
+    "    "
    ]
   },
   {
@@ -61,13 +73,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Code Here"
+    "list(range (0,11,2))"
    ]
   },
   {
@@ -80,14 +101,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Code in this cell\n",
-    "[]"
+    "#Code in this cel\n",
+    "list(range(0,51,3))"
    ]
   },
   {
@@ -100,10 +130,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "st = 'Print every word in this sentence that has an even number of letters'"
@@ -111,13 +139,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word\n",
+      "in\n",
+      "this\n",
+      "sentence\n",
+      "that\n",
+      "an\n",
+      "even\n",
+      "number\n",
+      "of\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "\n",
+    "for word in st.split():\n",
+    "    if len(word)%2==0:\n",
+    "        print(word)"
    ]
   },
   {
@@ -130,13 +176,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "Fizz\n",
+      "4\n",
+      "5\n",
+      "Fizz\n",
+      "7\n",
+      "8\n",
+      "Fizz\n",
+      "10\n",
+      "11\n",
+      "Fizz\n",
+      "13\n",
+      "14\n",
+      "Fizz\n",
+      "16\n",
+      "17\n",
+      "Fizz\n",
+      "19\n",
+      "20\n",
+      "Fizz\n",
+      "22\n",
+      "23\n",
+      "Fizz\n",
+      "25\n",
+      "26\n",
+      "Fizz\n",
+      "28\n",
+      "29\n",
+      "Fizz\n",
+      "31\n",
+      "32\n",
+      "Fizz\n",
+      "34\n",
+      "35\n",
+      "Fizz\n",
+      "37\n",
+      "38\n",
+      "Fizz\n",
+      "40\n",
+      "41\n",
+      "Fizz\n",
+      "43\n",
+      "44\n",
+      "Fizz\n",
+      "46\n",
+      "47\n",
+      "Fizz\n",
+      "49\n",
+      "50\n",
+      "Fizz\n",
+      "52\n",
+      "53\n",
+      "Fizz\n",
+      "55\n",
+      "56\n",
+      "Fizz\n",
+      "58\n",
+      "59\n",
+      "Fizz\n",
+      "61\n",
+      "62\n",
+      "Fizz\n",
+      "64\n",
+      "65\n",
+      "Fizz\n",
+      "67\n",
+      "68\n",
+      "Fizz\n",
+      "70\n",
+      "71\n",
+      "Fizz\n",
+      "73\n",
+      "74\n",
+      "Fizz\n",
+      "76\n",
+      "77\n",
+      "Fizz\n",
+      "79\n",
+      "80\n",
+      "Fizz\n",
+      "82\n",
+      "83\n",
+      "Fizz\n",
+      "85\n",
+      "86\n",
+      "Fizz\n",
+      "88\n",
+      "89\n",
+      "Fizz\n",
+      "91\n",
+      "92\n",
+      "Fizz\n",
+      "94\n",
+      "95\n",
+      "Fizz\n",
+      "97\n",
+      "98\n",
+      "Fizz\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "\n",
+    "for num in range(1,100):\n",
+    "    if (num%3== 0):\n",
+    "        print('Fizz')\n",
+    "    else:\n",
+    "        print(num)"
    ]
   },
   {
@@ -166,7 +322,7 @@
    },
    "outputs": [],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n"
    ]
   },
   {
@@ -179,7 +335,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
