another module completed

--- a/03-Methods and Functions/Trainingworkbook.ipynb
+++ b/03-Methods and Functions/Trainingworkbook.ipynb
@@ -305,8 +305,684 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "b92cffe1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 % 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "d00f9245",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3 % 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "a9c44f4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "41 % 40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "1dd5bc40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "42 % 40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "81b65ff8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "20 % 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "e62520d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "20 % 2 == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "bfd7882b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "21 % 2 == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "a5dc8431",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ev_check(number):\n",
+    "    return number % 2 == 0\n",
+    "   \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "fd1405a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ev_check(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "d72852c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ev_list(num_list):\n",
+    "    \n",
+    "    even_numbers = []\n",
+    "    \n",
+    "    for number in num_list:\n",
+    "        if number % 2 == 0:\n",
+    "            even_numbers.append(number)\n",
+    "        else:\n",
+    "            pass\n",
+    "            \n",
+    "    return even_numbers        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "6d36d0c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 3]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ev_list([1,2,3,4,5,6,8,10,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "b1a085da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ev_list([2,3,4,5,6,7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "018505a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stock_prices = [('Apple',200),('Google',400),('Micro',150)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "e9c8c92e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Apple', 200)\n",
+      "('Google', 400)\n",
+      "('Micro', 150)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in stock_prices:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "4c846fd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple\n",
+      "Google\n",
+      "Micro\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ticker,price in stock_prices:\n",
+    "    print(ticker)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "6006c368",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "220.0\n",
+      "440.0\n",
+      "165.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ticker,price in stock_prices:\n",
+    "    print(price+(0.1*price))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "6d7d21c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "work_hours = [('abby', 100),('Thomas', 302),('Emma',300)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "7e2b8680",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def employee_check(work_hours):\n",
+    "    \n",
+    "    current_max = 0\n",
+    "    employee_of_month =''\n",
+    "    \n",
+    "    for employee,hours in work_hours:\n",
+    "        if hours > current_max:\n",
+    "            current_max = hours\n",
+    "            employee_of_month = employee\n",
+    "        else:\n",
+    "            pass\n",
+    "    \n",
+    "    # Return\n",
+    "    return (employee_of_month,current_max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "2eca8d9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = employee_check(work_hours)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "0995168e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Thomas', 302)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "a79156c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 3, got 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/86/qn6vl22j3jjd3bjw57rl2h0w0000gn/T/ipykernel_16659/1408970912.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mhours\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlocation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0memployee_check\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwork_hours\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 3, got 2)"
+     ]
+    }
+   ],
+   "source": [
+    "name,hours,location = employee_check(work_hours)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "c075d1cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Thomas'"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "d41ddd81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "302"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hours"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "667bd10a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example = [1,2,3,4,5,6,7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "421a4be7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from random import shuffle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c9754b98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shuffle(example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c93d873d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 2, 4, 7, 1, 5, 6]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a831dd8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shuffle_list (mylist):\n",
+    "    shuffle(mylist)\n",
+    "    return mylist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "25bb2597",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = shuffle_list(example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "00f0b87f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 3, 6, 7, 4, 2, 1]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0185f032",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mylist = [' ','O',' ']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ce6b75a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['O', ' ', ' ']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shuffle_list(mylist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c4d3d21e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def player_guess():\n",
+    "    \n",
+    "    guess=''\n",
+    "    \n",
+    "    while guess not in ['0','1','2']:\n",
+    "        guess = input(\"Pick a number 0,1 or 2 : \")\n",
+    "    return int(guess)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "fb9067cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pick a number 0,1 or 2 : 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player_guess()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9a376466",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_guess(mylist,guess):\n",
+    "    \n",
+    "    if mylist[guess] == 'O':\n",
+    "        print('You have guessed correctly')\n",
+    "    else:\n",
+    "        print(\"Wrong guess !!!!\")\n",
+    "        print(mylist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "cacd39c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guess where the Ball is\n",
+      "0 1 2\n",
+      "  O  \n",
+      "Now shuffeling\n",
+      "Pick a number 0,1 or 2 : 0\n",
+      "Wrong guess !!!!\n",
+      "[' ', ' ', 'O']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('Guess where the Ball is')\n",
+    "print ('0','1','2')\n",
+    "print (' ','O',' ')\n",
+    "print ('Now shuffeling')\n",
+    "\n",
+    "# INITIAL LIST\n",
+    "mylist = [' ', 'O',' ']\n",
+    "\n",
+    "# SHUFFLE LIST\n",
+    "mixedup_list = shuffle_list(mylist)\n",
+    "\n",
+    "# USER GUESS\n",
+    "guess = player_guess()\n",
+    "\n",
+    "# CHECK GUESS\n",
+    "check_guess(mixedup_list,guess)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbf992ce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db6a342f",
    "metadata": {},
    "outputs": [],
    "source": []
